SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/Account_Partners_Data__c.object-meta.xml
<CustomObject>
    <description>Stores the information Relationship between Main Partner and Related Customer ID</description>
    <label>Account Partners Data</label>
    <nameField>
        <displayFormat>APD-{0000000}</displayFormat>
        <label>Account Partners Data Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Partners Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>