SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Account_Partner__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Partner</description>
    <inlineHelpText>Account Partner e.g. Ship-To</inlineHelpText>
    <label>Account Partner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Ship-To</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Partners Data (Sold-To)</relationshipLabel>
    <relationshipName>Account_Partners_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>