SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Account_Partner_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_External_ID__c</fullName>
    <description>Combination of Account Partner ID, Related S4 Customer ID and Role</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Account Partner ID, Related S4 Customer ID and Role</inlineHelpText>
    <label>Account Partner External ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>