SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Main_Partner__c.field-meta.xml
<CustomField>
    <fullName>Main_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Main Partner</description>
    <inlineHelpText>Main Partner (do not change)</inlineHelpText>
    <label>Main Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Partners Data</relationshipLabel>
    <relationshipName>Account_Partners_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>