SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Partner_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Address__c</fullName>
    <description>Account Partner Address</description>
    <formula>BLANKVALUE(Account_Partner__r.BillingStreet, &quot;&quot;) &amp; 
IF(ISBLANK(Account_Partner__r.BillingCity), &quot;&quot;, &quot; / &quot; &amp; Account_Partner__r.BillingCity) &amp;
IF(ISBLANK(Account_Partner__r.BillingCountry), &quot;&quot;, &quot; / &quot; &amp; Account_Partner__r.BillingCountry)</formula>
    <inlineHelpText>Account Partner Address</inlineHelpText>
    <label>Partner Address</label>
    <type>Text</type>
</CustomField>