SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this entry is the primary</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>