SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Related_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_ID__c</fullName>
    <description>Related S4 Customer ID</description>
    <inlineHelpText>Related S4 Customer ID</inlineHelpText>
    <label>Related Customer ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>