SynProdGITV1/force-app/main/default/objects/Account_Partners_Data__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This helps identify the function or responsibility the entity holds, such as shipping, billing, or contact details</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>